--- a/app/src/main/res/layout/channel_rating_details.xml
+++ b/app/src/main/res/layout/channel_rating_details.xml
@@ -10,7 +10,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:paddingTop="@dimen/list_view_item_horizontal_spacer">
 
@@ -21,6 +21,9 @@
             android:layout_height="match_parent"
             android:layout_marginEnd="@dimen/list_view_item_horizontal_spacer"
             android:layout_weight="1"
+            android:isIndicator="true"
+            android:max="5"
+            android:numStars="5"
             android:rating="@{channelRating.rating}"
             android:stepSize="1.0" />
 
