Add network operation

--- a/app/src/main/res/layout/fragment_report.xml
+++ b/app/src/main/res/layout/fragment_report.xml
@@ -11,11 +11,11 @@
         android:layout_height="match_parent">
 
         <Button
-            android:id="@+id/sednReport"
+            android:id="@+id/sendReport"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="16dp"
-            android:text="SenbReport"
+            android:layout_marginBottom="30dp"
+            android:text="SendReport"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.498"
