--- a/app/src/main/res/layout/fragment_iperf.xml
+++ b/app/src/main/res/layout/fragment_iperf.xml
@@ -58,18 +58,18 @@
         app:selectedColor="?attr/colorAccent"
         app:toggleMode="even" />
 
-    <!--<Switch
+    <Switch
         android:id="@+id/switchReverse"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/switch_compat"
-        android:layout_gravity="center_horizontal"
         android:layout_centerHorizontal="true"
+        android:layout_gravity="center_horizontal"
         android:layout_marginTop="125dp"
         android:checked="false"
-        android:text="Reverse"
-        android:textOff="Кошка"
-        android:textOn="Кот" />-->
+        android:text="Режим iperf"
+        android:textOff="Клиент"
+        android:textOn="Сервер" />
 
     <com.agik.AGIKSwipeButton.View.Swipe_Button_View
         android:id="@+id/start_stop"
